# GPCODE

./: .gitignore  0GPCODE_GA_lmdif_Parameter_Optimization_test.f90  CDOM.data  CMakeLists.txt  Fasham_Forcing.f90  GA_Fitness_Proportionate_Asexual_Reproduction.f90  GA_Fitness_Proportionate_Reproduction.f90  GA_Mutations.f90  GA_Tournament_Style_Sexual_Reproduction.f90  GA_calc_fitness.f90  GA_check_for_elite.f90  GA_parameters_module.f90  GA_random_recruit.f90  GA_random_replace.f90  GA_replace_bad_individuals.f90  GA_save_elites.f90  GA_variables_module.f90  GPCODE_GA_lmdif_Parameter_Optimization.f90  GPGA_cntl_vars.in  GPGA_cntl_vars_CDOM.in  GPGA_cntl_vars_CDOM_GP.in  GPGA_cntl_vars_fasham_fixed.in  GP_Check_Terminals.f90  GP_Clean_Tree_Nodes.f90  GP_Fitness_Proportionate_Asexual_Reproduction.f90  GP_Mutations.f90  GP_Tournament_Style_Sexual_Reproduction.f90  GP_Tree_Build.f90  GP_Tree_Build_single.f90  GP_Tree_Swap.f90  GP_calc_diversity_index.f90  GP_calc_fitness.f90  GP_data_module.f90  GP_individual_loop.f90  GP_individual_loop.new.f90  GP_para_lmdif_process.f90  GP_parameters_module.f90  GP_produce_first.f90  GP_produce_next.f90  GP_random_recruit.f90  (+138 more)
dataReader/: CMakeLists.txt  COLORReader_module.f90  Filter.f90  MXDReader_module.f90  Makefile  MakefileFilter  NetcdfReader_module.f90  SeaWiFS_4320_2160_autocorrelation.f  data.csv  data.cvs_2year  data.old.csv  data.xls  low_passed_data.csv  main.f90
